@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho



class APIGateway {
}
class TableController {
    - _tableRepositories: ITableRepositories
    +  GetTableById(Guid id) : Task<IActionResult> 
}

interface ITableRepositories<<interface>>  {
    + GetTableById(Guid id) : Task<GetTableResponseDTO?> 
}

class TableRepositories {
    - _tableDao: TableDAO
    + GetTableById(Guid id): Task<GetTableResponseDTO?>
}
class TableDAO {
    - _client.From<Table> : ISupabaseTable<Table>
    - _client.From<TableType> : ISupabaseTable<TableType>
    + GetTableById(Guid id):Task<GetTableResponseDTO?> 
    + IsTypeExists(Guid typeId): Task<bool> 
}

class Table {
    + Id: Guid
    + TableNumber: string
    + Capacity: int
    + Status: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + ShopId: Guid
    + TypeId: Guid
}
class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- TableController
TableController -- ITableRepositories
ITableRepositories <|-- TableRepositories
TableRepositories "1"--"1..*" TableDAO
TableDAO "1"--"0..*" Table
TableDAO "1"--"0..*" TableType


@enduml